# GeomCentral

./: README.md
apps/: CMakeLists.txt  direction_fields.cpp  geodesic_distance.cpp  mesh_convert.cpp  mesh_curvature.cpp  mesh_info.cpp  mesh_normals.cpp  mesh_remesh.cpp  mesh_sample.cpp  parameterize.cpp  simplify.cpp  subdivide.cpp  symmetry_detect.cpp
docs/: UserGuide.md
include/geometrycentral/surface/: detect_symmetry.h
src/: CMakeLists.txt
test/: CMakeLists.txt
test/src/: direction_fields_test.cpp  parameterization_test.cpp  subdivision_test.cpp  symmetry_detection_test.cpp
test/test-build/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  test_archive.ply  test_cloud.ply
test/test-build/googletest-build/: CTestTestfile.cmake  Makefile  cmake_install.cmake
test/test-build/googletest-build/googlemock/: CTestTestfile.cmake  Makefile  cmake_install.cmake
test/test-build/googletest-build/googletest/: CTestTestfile.cmake  Makefile  cmake_install.cmake
test/test-build/lib/: CTestTestfile.cmake  Makefile  cmake_install.cmake
test/test-build/lib/src/: CTestTestfile.cmake  Makefile  cmake_install.cmake
